--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	kosme/arduinoFFT@^1.5.6
 	kosme/fix_fft@^1.0
 	luisllamasbinaburo/QuickMedianLib@^1.1.1
+	khoih-prog/TimerInterrupt_Generic@^1.9.0
