--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	kosme/fix_fft@^1.0
 	luisllamasbinaburo/QuickMedianLib@^1.1.1
 	khoih-prog/TimerInterrupt_Generic@^1.9.0
+	jfturcot/SimpleTimer@0.0.0-alpha+sha.b30890b8f7
