Update requirements.txt; Update .gitignore; Resolve Arduino receiver namespace conflicts with desktop receiver

--- a/.gitignore
+++ b/.gitignore
@@ -37,17 +37,10 @@
 *.out
 *.app
 
-# Datasets
-data
-
 # Python blobs
 __pycache__
 venv
+wsl-venv
 
 # Tensorflow output
 *.tflite
-
-# Image files (VisualKeras output)
-*.png
-*.jpeg
-*.jpg
