Exclude desktop receiver from compilation process.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	luisllamasbinaburo/QuickMedianLib@^1.1.1
 	khoih-prog/TimerInterrupt_Generic@^1.9.0
 	jfturcot/SimpleTimer@0.0.0-alpha+sha.b30890b8f7
+build_src_filter = +<*> -<.git/> -<.svn/> -<receiver-desktop/>
